MDEV-14790 System versioning for system tables does not work as expected

Prohibited system versioning for CREATE TABLE and ALTER in `mysql` db.