sql/handler.h
@@ -1780,7 +1780,7 @@ protected:
     return as_row.start || as_row.end || system_time.start || system_time.end;
   }
   bool need_check(const Alter_info *alter_info) const;
-  bool check_with_conditions(const char *table_name) const;
+  bool check_conditions(const char *table_name, const LString_fs db) const;
   bool check_sys_fields(const char *table_name, Alter_info *alter_info,
                         bool native);
 
